# de-bird

./: .gitignore  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml
.cursor/rules/: README.md  base.mdc  code-style.mdc  distillation.mdc  get-started.mdc  git.mdc  rule-creation.mdc  rule-learning.mdc
.cursor/rules/frontend/: css.mdc  html.mdc  javascript.mdc  jinja.mdc  ui-consistency.mdc
.cursor/rules/languages/: python-flask.mdc  python.mdc  rust.mdc
.cursor/rules/tools/: pi-shell.mdc
de-bird/: server.py  setup.py
de-bird/systemd/: hid-gadget.service  pi-hid-bridge.service
keybird/: server.py  setup.py  uninstall.py
keybird/static/css/: style.css
keybird/static/js/: app.js
keybird/systemd/: hid-gadget.service  pi-hid-bridge.service
keybird/templates/: index.html
manual-deploy/: MANUAL_DEPLOY.md  README.md  deploy.sh  quick-start.sh
pi-hid-bridge/: README.md  deploy.sh  requirements.txt
pi-hid-bridge/app/: pi_kb.py
pi-hid-bridge/scripts/: gadget.conf
pi-hid-bridge/systemd/: pi-hid-bridge.service
