[project]
name = "de-bird"
version = "0.0.1"
description = "Turn a Raspberry Pi into a USB HID keyboard/mouse bridge"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Ian McCutcheon", email = "ian@mcyork.com"}
    {name = "jtroo"}
]
keywords = ["raspberry-pi", "hid", "usb-gadget", "keyboard", "mouse", "kvm"]

classifiers = [ ]
dependencies = [ ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
]

[project.urls]
Homepage = "https://github.com/jtroo-debird"

